# shift-lib-rs

./: Cargo.toml
.github/workflows/: test.yml
algebraic_structures_impl/: Cargo.toml
algebraic_structures_impl/src/: lib.rs
bitset/: Cargo.toml
bitset/src/: lib.rs
data_structure/: Cargo.toml
data_structure/disjoint_sparse_table/: Cargo.toml
data_structure/disjoint_sparse_table/src/: lib.rs
data_structure/range_set/: Cargo.toml
data_structure/range_set/src/: lib.rs
data_structure/src/: lib.rs  rangeset.rs
disjoint_sparse_table/: Cargo.toml
disjoint_sparse_table/src/: lib.rs
doubling/: Cargo.toml
doubling/src/: lib.rs
dynamic_segtree/: Cargo.toml
dynamic_segtree/src/: lib.rs
general/: Cargo.toml
general/src/: lib.rs
graph/: Cargo.toml
graph/src/: grid.rs  lib.rs
iter_ext/: Cargo.toml
iter_ext/src/: lib.rs
math/: Cargo.toml
math/src/: fft.rs  fp.rs  lib.rs
permutations/: Cargo.toml
permutations/src/: lib.rs
range_set/: Cargo.toml
range_set/src/: lib.rs
rangeset/: Cargo.toml
rangeset/src/: lib.rs
scanl/: Cargo.toml
segment_tree/: Cargo.toml
segment_tree/src/: lib.rs
src/: lib.rs  main.rs
swag/: Cargo.toml
swag/src/: lib.rs
traits/: Cargo.toml
traits/src/: lib.rs
