[package]
name = "shift-lib-rs-data-structure"
version = "0.1.0"
edition = "2018"
license = "CC0-1.0"
repository = ""
keywords = ["competitive"]
publish = false

[lib]
name = "shift_data_structure"

[dependencies]
__shift_disjoint_sparse_table = { package = "shift-lib-rs-disjoint-sparse-table", version = "0.1.0", path = "./disjoint_sparse_table" }
__shift_range_set = { package = "shift-lib-rs-range-set", version = "0.1.0", path = "./range_set" }
