[package]
name = "shift-lib-rs-disjoint-sparse-table"
version = "0.1.0"
edition = "2018"
license = "CC0-1.0"
repository = ""
keywords = ["competitive"]
publish = false

[lib]
name = "disjoint_sparse_table"

[dependencies]
__general = { package = "shift-lib-rs-general", version = "0.1.0", path = "../general" }
__traits = { package = "shift-lib-rs-traits", version = "0.1.0", path = "../traits" }
num-traits = "=0.2.11"