[package]
name = "shift-lib-rs-segment-tree"
version = "0.1.0"
edition = "2018"
license = "CC0-1.0"
repository = ""
keywords = ["competitive"]
publish = false

[lib]
name = "segment_tree"

[dependencies]
__general = { package = "shift-lib-rs-general", version = "0.1.0", path = "../general" }
__traits = { package = "shift-lib-rs-traits", version = "0.1.0", path = "../traits" }
num-traits = "=0.2.11"